# neudb

./: .gitignore  CHANGELOG.md  LICENSE  README.md  agent_demo.py  neudb.py  neudb_ai_schema.py  pyproject.toml  real_semantic_demo.py  requirements.txt
.github/workflows/: lint.yml  pages.yml  test.yml
demos/: agent_demo.py  real_semantic_demo.py  realworld_coding_assistant.py  semantic_demo.py
docs/: README.md
docs/brand/: README.md
docs/launch-video/: README.md  promo.html  render.py
neudb/: __init__.py  agent.py  ai_schema.py  api.py
tests/: test_agent.py  test_ai_schema.py  test_api.py  test_search.py  test_table.py
website/: README.md  index.html
website/css/: style.css
website/js/: background.js  main.js
