[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "neudb"
version = "0.4.0"
description = "A tiny, file-based, AI-native database engine with semantic search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.0"]
test = ["pytest>=8.0"]

[project.scripts]
neudb = "neudb:main"

[tool.setuptools]
packages = ["neudb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
