[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "neudb"
version = "0.4.0"
description = "A tiny, file-based, AI-native database engine with semantic search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
agent = ["sentence-transformers>=2.0"]
embeddings = ["sentence-transformers>=2.0"]
test = ["fastapi>=0.110", "httpx>=0.27", "pytest>=8.0"]

[project.scripts]
neudb = "neudb:main"
neudb-agent = "neudb.agent:main"

[tool.setuptools]
packages = ["neudb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
